export type GoogleMailType = {
  id: string;
  title: string;
  content: string;
  publishedAt: { dateTime: string };
}
